--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                         </svg>
                                     </span>
                                     <span class="text-sm cursor-text select-none button-label highlight-hover"
-                                          style="padding: 0rem 1.5rem 0rem 1rem;
+                                          style="padding: 0 1.5rem 0 1rem;
                                                  letter-spacing: 0.078125rem">stepan.jakl@outlook.com</span>
                                     <div class="tooltip-top tooltip">
                                         <span>Click to copy</span>
@@ -530,16 +530,16 @@
                                                     <path d="M2.333 17.667V2.333h8.063v2.042H4.375v11.25h11.25v-6.02h2.042v8.062H2.333ZM8 13.437 6.563 12l7.625-7.625h-1.792V2.333h5.27v5.271h-2.041V5.812L8 13.437Z">
                                                 </svg>
                                             </a>
-                                            <hr style="width: 100%;
+                                            <hr style="width: auto;
                                                        height: 0.5rem;
-                                                       margin: 0rem max(1px, 0.0625rem) 0rem max(1px, 0.0625rem);
+                                                       margin: 0 max(1px, 0.0625rem);
                                                        border: 0;
                                                        background-color: rgba(0, 0, 0, 0.15);
                                                        /* background-color: rgba(23, 28, 30, 0.375);
                                                        */ box-shadow: 0 min(-1px, -0.0625rem) 0 0 var(--context-border-inner);
                                                        border-top: solid max(1px, 0.0625rem) var(--context-border-outer);
                                                        box-sizing: content-box;
-                                                       transform: translateX(min(-1px, -0.0625rem));
+                                                       /* transform: translateX(min(-1px, -0.0625rem)); */
                                                        overflow: visible">
                                             <label id="menu_dropdown_light-mode" for="mode" tabindex="0">
                                                 <svg xmlns="http://www.w3.org/2000/svg"
@@ -1087,7 +1087,7 @@
                                     </div>
                                     <div class="sticky" style="bottom: calc(-1 * var(--segment))">
                                         <div class="absolute"
-                                             style="bottom: 0rem;
+                                             style="bottom: 0;
                                                     margin-left: calc(3rem + 3rem + 15rem );
                                                     width: 50rem;
                                                     /* outline: max(1px, 0.0625rem) solid red */">
