add hover edge scroll for timeline

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             console.log('%cThe ambition has been to create a performant, pixel-perfect and responsive site.', 'color: #4e7bff; margin: 0.9375rem 0 0.9375rem 1.25rem;')
             console.log('%cNo framework, no compiler, no site generator - only pure joy.', 'color: #4e7bff; margin: 0.9375rem 0 0.9375rem 1.25rem;')
             /* console.log('%cMade with tears, stress and anxiety. Just joking, of course it was crafted with love ;-)', 'color: #4e7bff; margin: 0.9375rem 0 0.9375rem 1.25rem;') */
-            console.log('%cInterested in working together? Reach out to me via email at %cstepan.jakl@outlook.com', 'color: #4e7bff; margin: 0.9375rem 0 0.9375rem 1.25rem;', 'color: #4e7bff; text-decoration: underline;')
+            console.log('%cInterested in working together? Reach out to me via email at %cstepanjakl@outlook.com', 'color: #4e7bff; margin: 0.9375rem 0 0.9375rem 1.25rem;', 'color: #4e7bff; text-decoration: underline;')
         </script>
         <script>
             const activateHighlight = (elementToSwapText, elementToHighlight, tempInnerText) => {
@@ -321,8 +321,8 @@
                                  class="inline-flex tooltip_wrapper"
                                  style="place-self: self-start">
                                 <div class="inline-flex align-items-center"
-                                     onmousedown="navigator.clipboard.writeText('stepan.jakl@outlook.com'); activateHighlight(this.querySelector('.tooltip span'), this.querySelector('.highlight-hover'), 'Copied to the clipboard')"
-                                     onkeydown="window.prompt('Copy to the clipboard: `Cmd/Ctrl + C` and then press `Enter`', 'stepan.jakl@outlook.com')"
+                                     onmousedown="navigator.clipboard.writeText('stepanjakl@outlook.com'); activateHighlight(this.querySelector('.tooltip span'), this.querySelector('.highlight-hover'), 'Copied to the clipboard')"
+                                     onkeydown="window.prompt('Copy to the clipboard: `Cmd/Ctrl + C` and then press `Enter`', 'stepanjakl@outlook.com')"
                                      tabindex="0"
                                      aria-label="Contact me via email">
                                     <span class="inline-flex rounded-full"
@@ -341,7 +341,7 @@
                                     </span>
                                     <span class="text-sm cursor-text select-none button-label highlight-hover"
                                           style="padding: 0 1.5rem 0 1rem;
-                                                 letter-spacing: 0.078125rem">stepan.jakl@outlook.com</span>
+                                                 letter-spacing: 0.078125rem">stepanjakl@outlook.com</span>
                                     <div class="tooltip-top tooltip">
                                         <span>Click to copy</span>
                                     </div>
@@ -974,10 +974,9 @@
                                         <path d="M6 15.708 4.333 14l3.979-4-3.979-4.021L6 4.271l4 4.021 4-4.021 1.667 1.708L11.688 10l3.979 4L14 15.708l-4-4.02Z">
                                     </svg>
                                 </a>
-                                <div style="position: relative; height: 100%; padding-bottom: 3rem">
+                                <div style="position: relative; height: 100%; padding-bottom: var(--segment-half)">
                                     <!-- overflow-y: scroll; -->
-                                    <div style="height: 200vh;
-                                                padding-top: 3rem;
+                                    <div style="padding-top: 3rem;
                                                 padding-left: 3rem;
                                                 padding-right: 6rem">
                                         <div class="flex flex-col" style="column-gap: 1.5rem">
@@ -1089,7 +1088,7 @@
                                                     left: calc(3rem + 3rem + 15rem );
                                                     right: calc(3rem + 3rem);
                                                     /* outline: max(1px, 0.0625rem) solid red */">
-                                            <horizontal-timeline labels="[2023, 2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014]"></horizontal-timeline>
+                                            <horizontal-timeline labels="[2025, 2024, 2023, 2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014]"></horizontal-timeline>
                                             <!-- <div style="margin: 0 4rem; border: white max(1px, 0.0625rem) solid; border-radius: 999rem">
                                             <div style="display: grid; grid-auto-flow: column; grid-auto-columns: max-content; column-gap: 0.625rem; padding: 0.625rem 1rem; font-size: 0.9375rem">
                                                 <button>
