add various updates (WIP)

--- a/index.html
+++ b/index.html
@@ -892,7 +892,8 @@
                                                 <!-- <button data-carousel-open-all>
                                                 <span class="text-xxs">Open all</span>
                                             </button> -->
-                                                <div class="flex flex-nowrap w-full overflow-auto" data-carousel-slides>
+                                            <div data-carousel-slides-wrapper>
+                                                <div data-carousel-slides>
                                                     <figure data-value="slide-1">
                                                         <a href="https://images.unsplash.com/photo-1566847438217-76e82d383f84?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1600&q=80g"
                                                            target="_blank">
@@ -936,6 +937,7 @@
                                                         </a>
                                                     </figure>
                                                 </div>
+                                            </div>
                                                 <div data-carousel-controls>
                                                 <div data-carousel-nav-wrapper>
                                                     <nav data-carousel-nav>
